<resources>
    <string name="app_name">Mini POS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_inventory">Add Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="log_out">log Out</string>
    <string name="profile">Profile</string>
    <string name="owner_name">Owner Name</string>
    <string name="business_name">Business Name</string>
    <string name="item_name">Item name</string>
    <string name="select_category">Select Category</string>
    <string name="cost">Cost</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="barcode_id">Barcode ID</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="item_image">Item Image</string>
    <string name="items">Items</string>
    <string name="_0">0</string>
    <string name="subtotal">Subtotal</string>
    <string name="order">Order</string>
    <string name="loging_in">Loging in.....</string>
    <string name="loading">Loading.....</string>
    <string name="save_item">Save Item</string>
    <string name="image">Image</string>
    <string name="_20">20</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="custom">Custom</string>
    <string name="clear">Clear</string>
    <string name="cash_recieved">Cash Recieved:</string>
    <string name="change">Change</string>
    <string name="gcash">GCASH</string>
    <string name="pay">Pay</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="create_an_account">Create An Account</string>
    <string name="first_name">First Name</string>
    <string name="lastname">Lastname</string>
    <string name="cancel">CANCEL</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log out?</string>
    <string name="x">x</string>
    <string name="current_purchases">Current Purchases</string>
    <string name="store_name">Store Name</string>
    <string name="store_password">Store Password</string>
    <string name="pin_code">Pin Code</string>
    <string name="my_store">My Store</string>
    <string name="proccessing">proccessing..</string>
    <string name="cashier">Cashier</string>
    <string name="cashier_name">Cashier Name</string>
    <string name="pin">Pin</string>
    <string name="to_add_cashier_profile">TO Add Cashier Profile</string>
    <string name="create_cashier_account">Create Cashier Account</string>

    <string name="lock">lock</string>
    <string name="do_not_share_your_pin_to_everyone">Do not share your pin to everyone</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="reset">Reset</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="_1">1</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="hello">Hello,</string>
    <string name="cashier2">Cashier: </string>
    <string name="total">Total</string>

    <string name="total_sales">Total Sales</string>
    <string name="transactions">Transactions</string>
    <string name="item_sold">Item Sold</string>
    <string name="cost_of_goods">Cost of goods</string>
    <string name="profit">Profit</string>
    <string name="time">Time</string>
    <string name="total_refunds">Total Refunds</string>
    <string name="thank_you">Thank You!</string>
    <string name="date">Date</string>
    <string name="dashboard">Dashboard</string>
    <string name="store_dashboard">Store Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="time_in">Time In</string>
    <string name="selfie_in">Selfie In</string>
    <string name="checkattendace">CheckAttendace</string>
    <string name="select_your_name">Select your name</string>
    <string name="send">send</string>
    <string name="haha">HAHA</string>
    <string name="selfie_out">Selfie Out</string>
    <string name="refund">Refund</string>
    <string name="share">Share</string>
    <string name="recent_capture">Recent Capture</string>
    <string name="category">Category</string>
    <string name="account_details">Account Details</string>
    <string name="cashiers">Cashiers</string>
    <string name="employee">Employee</string>
    <string name="cashier_sales">Cashier Sales</string>
    <string name="starting_cash">Starting Cash</string>
    <string name="save">Save</string>
    <string name="cash_added">Cash Added</string>
    <string name="cash_sale_since">Cash Sale Since</string>
    <string name="cash_sales_today">Cash Sales Today</string>
    <string name="set_starting_cash">Set starting cash!</string>
    <string name="cashier_cash_drawers">Cashier Cash Drawers</string>
    <string name="cash_drawer">Cash Drawer</string>
    <string name="cash_drawer_total">Cash Drawer Total</string>
    <string name="add_cash_to_the_drawer">Add Cash To the drawer</string>
    <string name="add_cash">Add Cash</string>
    <string name="amount">Amount</string>
    <string name="bg">bg</string>
    <string name="update_item">Update Item</string>
    <string name="add_item">Add Item</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="scan_item">Scan Item</string>
    <string name="store_pin">Store Pin</string>
    <string name="add_stocks">Add Stocks</string>
    <string name="inventory">Inventory</string>
    <string name="features">Features</string>
    <string name="update_store_profile">Update Store Profile</string>
    <string name="back">back</string>
    <string name="save_changes">Save Changes</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="itemss">Items :</string>
    <string name="enter_your_4_digit_pin">Enter your 4 digit pin</string>
    <string name="submit">Submit</string>
    <string name="pos_system">Pos System</string>
    <string name="view_items">view items</string>
    <string name="searc_item">Searc Item</string>
    <string name="cash_sales">Cash Sales</string>
    <string name="expenses">Expenses</string>
    <string name="receipt">Receipt</string>
    <string name="cash">Cash</string>
    <string name="sorry_this_feature_is_under_development">Sorry, this feature is under development</string>
    <string name="employee_name">Employee Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_4_digit_pin">Enter 4 digit Pin</string>
    <string name="add_employee">Add employee</string>
    <string name="logo_here">logo Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="retake">Retake</string>
    <string name="_0000">0000</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_cashier_inventory">CashierInventory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accounts">Accounts</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
</resources>