<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cashier_cash_drawer"
            android:icon="@drawable/cashdrawer"
            android:title="@string/cash_drawer" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/log_out" />
    </group>
</menu>