<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_store_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
        android:id="@+id/nav_drawer"
        android:title="Cash Drawer"
        android:icon="@drawable/cashdrawer"/>
    <item
        android:id="@+id/nav_inventory"
        android:title="Inventory"
        android:icon="@drawable/inventory"/>
    <item
        android:id="@+id/nav_cashier"
        android:title="@string/cashier"
        android:icon="@drawable/ic_baseline_people_24"
        />
    <item
        android:id="@+id/nav_account"
        android:title="@string/my_store"
        android:icon="@drawable/ic_baseline_store_24" />
</menu>