<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_employee"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:id="@+id/cashierImage"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:background="@drawable/employee"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:focusable="true" />
            <ImageButton
                android:id="@+id/buttonGallery"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_image"
                android:contentDescription="@string/gallery" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee_name"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:id="@+id/inputEmployeeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_code"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:id="@+id/inputEmployeePin"
                android:layout_width="match_parent"
                android:maxLength="4"
                android:text="@string/_0000"
                android:layout_height="wrap_content"
                android:hint="@string/enter_4_digit_pin"
                android:inputType="number"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/buttonSaveEmployee"
        android:text="@string/add_employee"
        android:drawableEnd="@drawable/ic_arrow___right_2"
        android:backgroundTint="@color/black"/>

</LinearLayout>