<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/itemPurcasedQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/quantity"/>
    <TextView
        android:id="@+id/textItemPurchasedName"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/itemPurchasedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/price"/>

</LinearLayout>