<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mystore.bottomnav.account.AccountFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="end"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my_profile"
            android:layout_marginStart="5dp"

            android:layout_weight="1"
            android:gravity="center"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="80dp"
            android:id="@+id/imageAddStoreImage"
            android:clickable="true"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
            android:layout_height="80dp"
            android:focusable="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textAccountOwnerName"
                android:text="@string/name"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                android:id="@+id/textAccountBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_name" />
        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">
    <Button
        android:id="@+id/buttonEditAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_margin="5dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_margin="5dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="PHONE NUMBER"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/textAccountPhone"
            style="@style/TextAppearance.Material3.TitleMedium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="EMAIL"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textAccountEmail"
            android:background="@android:color/transparent"
            style="@style/TextAppearance.Material3.TitleMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Store Pin Code"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_pin"
            android:id="@+id/textStorePin"
            android:background="@android:color/transparent"
            style="@style/TextAppearance.Material3.TitleMedium"/>
    </LinearLayout>




</LinearLayout>