<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mystore.bottomnav.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textAccountOwnerName"
                android:text="@string/name"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                android:id="@+id/textAccountBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_name"
                />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageAddStoreImage"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_baseline_add_a_photo_24"
            android:contentDescription="@string/store_name" />

    </LinearLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_details"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="PHONE NUMBER"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:id="@+id/textAccountPhone"
                style="@style/TextAppearance.Material3.TitleMedium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="EMAIL"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textAccountEmail"
                android:background="@android:color/transparent"
                style="@style/TextAppearance.Material3.TitleMedium"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>