<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="end"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:id="@+id/textItemName"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_name"
                android:layout_weight="1"
                android:layout_margin="5dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
            <TextView
                android:id="@+id/textItemPurchasedPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/_1000"
                android:layout_margin="5dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>
           <Button
               android:id="@+id/buttonRefund"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/refund"/>
        </LinearLayout>

</LinearLayout>
